@@ -438,6 +438,7 @@ PluginInstance::PluginInstance (NPP instance, guint16 mode)
 	loading_splash = false;
 	is_splash = false;
 	is_shutting_down = false;
+	is_reentrant_mess = false;
 	has_shutdown = false;
 
 	bridge = NULL;
@@ -858,9 +859,11 @@ PluginInstance::Initialize (int argc, char* argn[], char* argv[])
 	if (strstr (useragent, "Opera")) {
 		// opera based
 		TryLoadBridge ("opera");
+		is_reentrant_mess = true;
 	}
 	else if (strstr (useragent, "AppleWebKit")) {
 		// webkit based
+		is_reentrant_mess = true;
 		TryLoadBridge ("webkit");
 	}
         else if (strstr (useragent, "Gecko")) {
@@ -1057,7 +1060,7 @@ void
 PluginInstance::CreateWindow ()
 {
 	bool created = false;
-	bool success = true;
+	bool normal_startup = !is_reentrant_mess;
 	
 	if (moon_window == NULL) {
 		if (windowless) {
@@ -1085,8 +1088,11 @@ PluginInstance::CreateWindow ()
 
 	// NOTE: last testing showed this call causes opera to reenter but moving it is trouble and
 	// the bug is on opera's side.
-	SetPageURL ();
-	success = LoadSplash ();
+
+	if (normal_startup) {
+		SetPageURL ();
+		normal_startup = LoadSplash ();
+	}
 
 	surface->SetFPSReportFunc (ReportFPS, this);
 	surface->SetCacheReportFunc (ReportCache, this);
@@ -1106,7 +1112,7 @@ PluginInstance::CreateWindow ()
 		delete c;
 	}
 	
-	if (success && !windowless && !connected_to_container) {
+	if (normal_startup && !windowless && !connected_to_container) {
 		//  GtkPlug container and surface inside
 		container = gtk_plug_new ((GdkNativeWindow) window->window);
 
@@ -1354,6 +1360,39 @@ PluginInstance::NewStream (NPMIMEType type, NPStream *stream, NPBool seekable, g
 	
 	nps (printf ("PluginInstance::NewStream (%p, %p, %i, %p)\n", type, stream, seekable, stype));
 
+	if (is_reentrant_mess && !IS_NOTIFY_DOWNLOADER (stream->notifyData)) {
+		if (source_location == NULL) {
+			SetPageURL ();
+			bool success = LoadSplash ();
+			if (success && !windowless && !connected_to_container) {
+				//  GtkPlug container and surface inside
+				container = gtk_plug_new ((GdkNativeWindow) window->window);
+
+				// Connect signals to container
+				GTK_WIDGET_SET_FLAGS (GTK_WIDGET (container), GTK_CAN_FOCUS);
+
+				gtk_widget_add_events (container,
+						       GDK_BUTTON_PRESS_MASK |
+						       GDK_BUTTON_RELEASE_MASK |
+						       GDK_KEY_PRESS_MASK |
+						       GDK_KEY_RELEASE_MASK |
+						       GDK_POINTER_MOTION_MASK |
+						       GDK_SCROLL_MASK |
+						       GDK_EXPOSURE_MASK |
+						       GDK_VISIBILITY_NOTIFY_MASK |
+						       GDK_ENTER_NOTIFY_MASK |
+						       GDK_LEAVE_NOTIFY_MASK |
+						       GDK_FOCUS_CHANGE_MASK
+				);
+
+				g_signal_connect (G_OBJECT(container), "button-press-event", G_CALLBACK (PluginInstance::plugin_button_press_callback), this);
+
+				gtk_container_add (GTK_CONTAINER (container), ((MoonWindowGtk*)moon_window)->GetWidget());
+				gtk_widget_show_all (container);
+				connected_to_container = true;
+			}
+		}
+	}
 	if (IS_NOTIFY_SPLASHSOURCE (stream->notifyData)) {
 		SetPageURL ();
 
